[gd_scene load_steps=2 format=3 uid="uid://bgwbm7kndxxn8"]

[ext_resource type="Script" path="res://game/lawn/level/level/level.gd" id="1_t2vv5"]

[node name="Level" type="Node2D"]
script = ExtResource("1_t2vv5")

[node name="BackGroundLayer" type="Node2D" parent="."]

[node name="EntityLayer" type="Node2D" parent="."]

[node name="Layer0" type="Node2D" parent="EntityLayer"]

[node name="Layer1" type="Node2D" parent="EntityLayer"]

[node name="Layer2" type="Node2D" parent="EntityLayer"]

[node name="Layer3" type="Node2D" parent="EntityLayer"]

[node name="Layer4" type="Node2D" parent="EntityLayer"]

[node name="Layer5" type="Node2D" parent="EntityLayer"]

[node name="CollectLayer" type="Node2D" parent="."]

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
